# matrix-onebot

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  sqlite3.lib
.github/workflows/: compile.yml
src/: constant.rs  error.rs  main.rs
src/config/: config.rs  mod.rs
src/matrix/: entry.rs  mod.rs  unsafe_actions.rs
src/matrix/handlers/: handler.rs  invite.rs  member.rs  message.rs  mod.rs
src/onebot/: action_handler.rs  entry.rs  matrix.rs  mod.rs
src/onebot/actions/: handler.rs  message.rs  mod.rs  person.rs
src/onebot/event_build/: member.rs  message.rs  mod.rs
src/onebot/model/: actions.rs
src/sql/: mod.rs  sqlite.rs
src/sql/table/: matrix_events.rs  matrix_messages.rs  mod.rs
