[package]
name = "matrix-onebot"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = "0.7.1"
walle-core = { version = "0.7.4", features = ["http", "websocket", "impl-obc", "alt"] }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "time"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
js_int = "0.2.2"
async-trait = "0.1.83"
log = "0.4.22"
once_cell = "1.20.2"